_sass/_variables.scss
/*******************************************************************************
 * Variables used throughout the theme.
 * To adjust anything, simply edit the variables below and rebuild the theme.
 ******************************************************************************/

@use "sass:color";

// Colors
$red-color: #ff3636 !default;
$red-color-dark: #b71c1c !default;
$orange-color: #f29105 !default;
$blue-color: #0076df !default;
$blue-color-dark: #00369f !default;
$cyan-color: #d49585 !default;
$light-cyan-color: color.adjust($cyan-color, $lightness: 25%);
$green-color: #00ab37 !default;
$green-color-lime: #b7d12a !default;
$green-color-dark: #009f06 !default;
$green-color-light: #ddffdd !default;
$green-color-bright: #11d68b !default;
$purple-color: #c27458 !default;
$light-purple-color: color.adjust($purple-color, $lightness: 25%);
$pink-color: #f92080 !default;
$pink-color-light: #ffdddd !default;
$yellow-color: #efcc00 !default;

$grey-color: #828282 !default;
$grey-color-light: color.adjust($grey-color, $lightness: 40%);
$grey-color-dark: #1c1c1d;
$grey-900: #212529;

$white-color: #fcfaf6 !default;
$black-color: #3b3330 !default;

// Theme colors

$code-bg-color-light: rgba($purple-color, 0.05);
$code-bg-color-dark: #2c3237 !default;

// Font awesome location
$fa-font-path: "../webfonts";

// Back To Top button config
$back-to-top-z-index: 10;
$back-to-top-bottom: 30px;
$back-to-top-right: 30px;
$back-to-top-diameter: 40px;
$back-to-top-height: $back-to-top-diameter;
$back-to-top-width: $back-to-top-diameter;

// Max width default
$max-content-width: 930px !default;

